--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,18 @@
     margin: 0 auto;
 }
 
+
+
+.label > div
+{
+    font-family: Helvetica, Arial;
+    position: absolute;
+    background: #00000088;
+    color: white;
+    padding: 15px;
+    white-space: nowrap;
+    overflow: hidden;
+    border-radius: 30px;
+    user-select: none;
+}
+
