--- a/src/App.css
+++ b/src/App.css
@@ -13,11 +13,11 @@
 {
     min-width: 12rem;
     max-width: 20rem;
-    font-family: Helvetica, Arial;
+    font-family: 'DM Sans', sans-serif;
     position: absolute;
-    background: rgba(0, 0, 0, 0.75);
+    background: rgba(0, 0, 0, 0.65);
     color: white;
-    padding: 15px;
+    padding: 0.75rem;
     white-space: normal;
     overflow: hidden;
     border-radius: 10px;
